--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_mobx: ^2.0.1
   mobx: ^2.0.3
   firebase_core: ^1.3.0
-  firebase_auth:
+  firebase_auth: ^3.1.1
   cloud_firestore:
   google_sign_in: ^5.0.4
   get: ^4.3.8
